style: remove all em dashes and writing style violations from markdown files
Replaced em dashes (—) with periods, colons, commas, or restructured
sentences across all .md files per the writing style guide.

Files cleaned: AGENTS.md, SOUL.md, BOOTSTRAP.md, MEMORY.md, IDENTITY.md,
USER.md, TOOLS.md, INITIALIZATION-PROMPT.md, PHILOSOPHY.md,
SKILL-CREATION.md, WRITING-STYLE-GUIDE.md, SKILL-TEMPLATE.md,
bird-cli/SKILL.md, meeting-summary/SKILL.md, x-content-scan/SKILL.md,
example-2026-01-01.md

--- a/memory/example-2026-01-01.md
+++ b/memory/example-2026-01-01.md
@@ -7,7 +7,7 @@
 
 ## Notes
 - Human asked about automating LinkedIn posting cadence
-- Found article about new OpenClaw release — flagged for update later
+- Found article about new OpenClaw release. Flagged for update later.
 - Noticed Telegram link previews are turned on; human dislikes this (add to TO-DO)
 
 ## Decisions
